Added functions for the rest of the app
- handleInteraction
- checkForWin
- gameOver
- checkLetter
- showMatchedLetter

--- a/css/styles.css
+++ b/css/styles.css
@@ -135,11 +135,13 @@ button {
   border-radius: 5px;
   font-size: var(--font-size-medium);
   color: #FFFFFF;
+  cursor: default;
 }
 
 .wrong {
   background: #f7a964;
   color: #FFFFFF;
+  cursor: default;
 }
 
 .btn__reset {
